Added private tags and made so the variables can be changed from the config.yaml file

--- a/config.yaml
+++ b/config.yaml
@@ -4,3 +4,11 @@ rabbitMQ:
   username: "guest"
   password: "guest"
   queue_name: "DICOM_Processor"
+
+variables:
+  PatientName: "SEDI_TEST001"
+  ProfileName: "TEST_PROFILE"
+  ProjectName: "TEST_PROJECT"
+  TrialName: "TEST_PROJECT"
+  SiteName: "MAASTRO"
+  SiteID: "1"
