--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,6 @@
 rabbitMQanonymizer:
-  host: "localhost"
+  host: "rabbitmq"
   port: "5672"
   username: "guest"
   password: "guest"
   queue_name: "anonymizer"
-  
-variables:
-  PatientName: "SEDI_TEST001"
-  ProfileName: "TEST_PROFILE"
-  ProjectName: "TEST_PROJECT"
-  TrialName: "TEST_PROJECT"
-  SiteName: "MAASTRO"
-  SiteID: "1"
